--- a/TDR-Duty-Free-Returns-to-the-US.html
+++ b/TDR-Duty-Free-Returns-to-the-US.html
@@ -379,7 +379,7 @@
             <div class="row align-items-lg-center gutter-50">
               <div class="col-lg-6">
                 <svg width="100%"viewBox="0 0 618.78137 112.40881" version="1.1"
-  id="SVGDutyFreeReturnsToTheUS" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" fill="var(--darkBlue)">
+  id="SVGDutyFreeReturnsToTheUS" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" fill="var(--white)">
   <defs id="defs28809" />
   <g id="layer1" transform="translate(280.38864,-50.898735)">
     <g aria-label="Returns" id="text49058"
