--- a/404.html
+++ b/404.html
@@ -140,6 +140,10 @@
     color: #645439;
   }
 
+  .menu-item.current>.menu-link {
+    --cnvs-primary-menu-active-color: #645439;
+  }
+
   .sub-menu-container .menu-item>.menu-link {
     --cnvs-primary-menu-submenu-color: #645439;
   }
