--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     color: @@text-color;
   }
 
+  .menu-item.current>.menu-link {
+    --cnvs-primary-menu-active-color: @@text-color;
+  }
+
   .sub-menu-container .menu-item>.menu-link {
     --cnvs-primary-menu-submenu-color: @@text-color;
   }
