--- a/send-us-a-message.html
+++ b/send-us-a-message.html
@@ -301,7 +301,8 @@
 							<div class="fw-bold display-5">Contact Us</div>
 						</h1>
 						<span class="fw-light" style="max-width: 40rem;">Need assistance? You’re in the right place! Drop us a
-							message, and our team will get back to you within 24 business hours. We’re here to help with any questions
+							message, and our team will get back to you within 24 business hours. We’re here to
+							help with any questions
 							or concerns you have.</span>
 					</div>
 				</div>
@@ -328,7 +329,7 @@
 									<!-- required by staticForms.xyz -->
 									<input type="hidden" name="accessKey" value="a946fec7-7261-44c0-9c93-74c04dc58639">
 									<!-- If you want form to redirect to a specific url after submission -->
-									<input type="hidden" name="redirectTo" value="Send us a message | Trade Duty Refund/message-sent-success">
+									<input type="hidden" name="redirectTo" value="/message-sent-success.html">
 
 									<div class="col-md-6 form-group">
 										<label for="name">Name <small>*</small></label>
