--- a/404.html
+++ b/404.html
@@ -20,14 +20,14 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 
-<title>Trade Duty Refund | Simplifying Global Duty-Free Returns for Your Business</title>
-<meta name="description" content="Trade Duty Refund (TDR) streamlines global duty-free returns, helping businesses reclaim goods without import duties. Simplify eCommerce logistics, reduce costs, and protect your profit margins with our seamless solutions for the EU, UK, and US." xmlns:og="http://opengraphprotocol.org/schema/" />
+<title></title>
+<meta name="description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Trade Duty Refund | Simplifying Global Duty-Free Returns for Your Business" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:description" content="Trade Duty Refund (TDR) streamlines global duty-free returns, helping businesses reclaim goods without import duties. Simplify eCommerce logistics, reduce costs, and protect your profit margins with our seamless solutions for the EU, UK, and US." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="https://tradedutyrefund.com" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:title" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="https://tradedutyrefund.com" />
-<meta name="twitter:title" content="Trade Duty Refund | Simplifying Global Duty-Free Returns for Your Business" />
-<meta name="twitter:description" content="Trade Duty Refund (TDR) streamlines global duty-free returns, helping businesses reclaim goods without import duties. Simplify eCommerce logistics, reduce costs, and protect your profit margins with our seamless solutions for the EU, UK, and US." />
+<meta property="twitter:url" content="" />
+<meta name="twitter:title" content="" />
+<meta name="twitter:description" content="" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com" />
-<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com" />
+<link rel="alternate" hreflang="en" href="" />
+<link rel="alternate" hreflang="fr" href="" />
+<link rel="alternate" hreflang="it" href="" />
+<link rel="alternate" hreflang="x-default" href="" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -309,7 +309,7 @@
 						<div class="heading-block border-bottom-0">
 							<h4>Ooopps! The page you were looking for couldn't be found.</h4>
 						</div>
-						<a type="button" class="btn btn-outline-primary" href="https://tradedutyrefund.com">Come back home</a>
+						<a type="button" class="btn btn-outline-primary" href="">Come back home</a>
 					</div>
 				</div>
 
