--- a/e-book-a-practical-guide-to-customs-duties-on-returns-.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns-.html
@@ -20,14 +20,14 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 
-<title>Send us a message | Trade Duty Refund</title>
-<meta name="description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." xmlns:og="http://opengraphprotocol.org/schema/" />
+<title>Schedule a Duty Reclaim Consultation | Trade Duty Refund</title>
+<meta name="description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Send us a message | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="send-us-a-message.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="make-an-appointment.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="send-us-a-message.html" />
-<meta name="twitter:title" content="Send us a message | Trade Duty Refund" />
-<meta name="twitter:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." />
+<meta property="twitter:url" content="make-an-appointment.html" />
+<meta name="twitter:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" />
+<meta name="twitter:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="send-us-a-message.html" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/send-us-a-message.html" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/send-us-a-message.html" />
-<link rel="alternate" hreflang="x-default" href="send-us-a-message.html" />
+<link rel="alternate" hreflang="en" href="make-an-appointment.html" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/make-an-appointment.html" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/make-an-appointment.html" />
+<link rel="alternate" hreflang="x-default" href="make-an-appointment.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -79,24 +79,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v3.0.0-rc.16/dist/cookieconsent.css">
 </noscript>
 
-	<!-- Only Required if Icons are shown on page -->
-	<!-- Font Icons Start -->
-<link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript>
-  <link rel="stylesheet" href="./css/font-icons.css">
-</noscript>
-<!-- Font Icons End -->
-
-
 	<!-- Only Required if Samaritan color is required -->
 	<link rel="stylesheet" href="./css/custom/samaritan.css">
 
 	<style>
-		.call-center-bg {
-			background-image: url('data:image/svg+xml,<svg id="visual" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><defs><filter id="blur1" x="-10%" y="-10%" width="120%" height="120%"><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"></feBlend><feGaussianBlur stdDeviation="163" result="effect1_foregroundBlur"></feGaussianBlur></filter></defs><rect width="960" height="540" fill="%233c6382"></rect><g filter="url(%23blur1)"><circle cx="792" cy="97" fill="%23b1c0cd" r="363"></circle><circle cx="235" cy="442" fill="%233c6382" r="363"></circle><circle cx="89" cy="60" fill="%23b1c0cd" r="363"></circle><circle cx="86" cy="317" fill="%23b1c0cd" r="363"></circle><circle cx="584" cy="173" fill="%233c6382" r="363"></circle><circle cx="758" cy="299" fill="%23b1c0cd" r="363"></circle></g></svg>');
-			background-size: cover;
+		.vh-70 {
+			height: 70vh;
 		}
 	</style>
+
 </head>
 
 <body class="stretched samaritan-background">
@@ -287,31 +278,47 @@
     </div>
   </div>
   <div class="header-wrap-clone"></div>
-</header> <!-- end of header -->
-
-		<!-- Page Title
+</header>
+		<!-- end of header
 		============================================= -->
-		<section class="page-title bg-transparent border-0">
-			<div class="container">
-				<div class="page-title-row pt-5 pb-3">
+		<div class="section bg-transparent my-0 my-lg-5 pb-0 pb-lg-5">
+			<div class="container mw-md py-3">
+				<div class="row gy-5">
+					<div class="col-sm-9">
+						<div class="fs-6 op-07 mb-3 text-lightSamaritan">TDR e-Books</div>
+						<h3 class="display-3 mb-0 fw-normal">Master the Essentials of Customs Strategies<span
+								class="font-secondary fw-bold fst-italic text-lightSamaritan "> To Reduce eCom Returns Costs</span></h3>
+					</div>
 
-					<div class="page-title-content">
-						<span class="text-lightSamaritan fw-medium my-0">We are here to help</span>
-						<h1>
-							<div class="fw-bold display-5">Contact Us</div>
-						</h1>
-						<span class="fw-light" style="max-width: 40rem;">Need assistance? You’re in the right place! Drop us a
-							message, and our team will get back to you within 24 business hours. We’re here to
-							help with any questions
-							or concerns you have.</span>
+
+					<div class="col-md-4">
+						<h2 class="fw-normal ls-0 text-transform-none mb-4 font-primary h1">About this Book</h2>
+						<p class="text-lightSamaritan">Unlock actionable strategies for e-commerce returns, customs duties, and the
+							latest regulation updates
+							with this comprehensive guide. Get expert insights and market data about:</p>
+						<h4 class="mb-3 fw-normal font-body"><i class="bi-check-circle-fill me-1 color"></i> e-Commerce returns
+							market
+
+						</h4>
+						<h4 class="mb-3 fw-normal font-body"><i class="bi-check-circle-fill me-1 color"></i> Customs duties
+							strategies
+						</h4>
+						<h4 class="mb-3 fw-normal font-body"><i class="bi-check-circle-fill me-1 color"></i> Regulation Update
+						</h4>
+						<h4 class="mb-3 fw-normal font-body"><i class="bi-check-circle-fill me-1 color"></i> Sample Calculations
+						</h4>
+						<h4 class="mb-3 fw-normal font-body"><i class="bi-check-circle-fill me-1 color"></i> Glossary & Practical
+							Tips</h4>
+					</div>
+
+					<div class="col-md-8 text-center">
+						<img src="./images/eBook/a-practical-guide-to-customs-duties-on-returns.webp" class="rounded-6 vh-70"
+							alt="...">
 					</div>
 				</div>
 			</div>
-		</section><!-- .page-title end -->
+		</div>
 
-
-		<!-- Contact Form & Map Overlay Section
-		============================================= -->
 		<section id="content">
 			<div class="container">
 
@@ -319,68 +326,53 @@
 					<!-- Contact Form Overlay
 					============================================= -->
 					<div class="contact-form-overlay col-md-8 offset-md-2 p-5">
+						<h2 class="fw-normal ls-0 text-transform-none mb-4 font-primary h1">Download Your Free Edition!</h2>
+						<p class="text-lightSamaritan">
+							Fill in the form below and we'll send you a link with a free access to our ebook.
+						</p>
 
-						<div class="">
-
-							<!-- Contact Form
+						<!-- Contact Form
 							============================================= -->
-							<form class="row mb-0" id="contactForm" action="https://api.staticforms.xyz/submit" method="post">
-								<fieldset>
-									<!-- required by staticForms.xyz -->
-									<input type="hidden" name="accessKey" value="a946fec7-7261-44c0-9c93-74c04dc58639">
-									<!-- If you want form to redirect to a specific url after submission -->
-									<input id="redirectTo" type="hidden" name="redirectTo" value="">
+						<form class="row mb-0" id="contactForm" action="https://api.staticforms.xyz/submit" method="post">
+							<fieldset>
+								<!-- required by staticForms.xyz -->
+								<input type="hidden" name="accessKey" value="a946fec7-7261-44c0-9c93-74c04dc58639">
+								<!-- If you want form to redirect to a specific url after submission -->
+								<input id="redirectTo" type="hidden" name="redirectTo" value="">
 
-									<div class="col-md-6 form-group">
-										<label for="name">Name <small>*</small></label>
-										<input type="text" id="name" name="name" class="form-control" required>
-									</div>
+								<div class="col-md-6 mx-md-auto form-group">
+									<label for="name">Name <small>*</small></label>
+									<input type="text" id="name" name="name" class="form-control" required>
+								</div>
 
-									<div class="col-md-6 form-group">
-										<label for="email">Email <small>*</small></label>
-										<input type="email" id="email" name="email"
-											pattern=pattern="(?![_.-])((?![_.-][_.-])[a-zA-Z\d_.-]){0,63}[a-zA-Z\d]@((?!-)((?!--)[a-zA-Z\d-]){0,63}[a-zA-Z\d]\.){1,2}([a-zA-Z]{2,14}\.)?[a-zA-Z]{2,14}"
-											class="form-control" required>
-									</div>
+								<div class="col-md-6 mx-md-auto form-group">
+									<label for="email">Email <small>*</small></label>
+									<input type="email" id="email" name="email"
+										pattern=pattern="(?![_.-])((?![_.-][_.-])[a-zA-Z\d_.-]){0,63}[a-zA-Z\d]@((?!-)((?!--)[a-zA-Z\d-]){0,63}[a-zA-Z\d]\.){1,2}([a-zA-Z]{2,14}\.)?[a-zA-Z]{2,14}"
+										class="form-control" required>
+								</div>
 
-									<div class="w-100"></div>
+								<div class=""></div>
 
-									<div class="col-12 form-group">
-										<label for="message">Message <small>*</small></label>
-										<textarea class="form-control" id="message" name="message" rows="6" cols="30" required></textarea>
-									</div>
-
-									<div class="col-12 form-group">
-										<input class="btn btn-light" type="submit" value="submit">
-										</input>
-										<!-- <button class="g-recaptcha" data-sitekey="6LfK0JYqAAAAACn4qq-1KudtU3Yx77odbPPA76z7"
+								<div class="col-md-6 mx-md-auto form-group">
+									<input class="btn btn-light" type="submit" value="submit">
+									</input>
+									<!-- <button class="g-recaptcha" data-sitekey="6LfK0JYqAAAAACn4qq-1KudtU3Yx77odbPPA76z7"
 											data-callback='onSubmit' data-action='submit'>Submit</button> -->
-									</div>
-								</fieldset>
-							</form>
-						</div>
-
-					</div><!-- Contact Form Overlay End -->
-				</div>
-
-			</div>
-		</section>
-		<section id="content">
-			<div class="content-wrap">
-				<div class="container">
-
-					<div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-						<h2 class="mb-1 h2">Would you rather speak with an expert?</span></h2>
-						<h3 class="mb-4 fw-medium">TDR offers one-on-one sessions to quantify the value we bring to your business.
-						</h3>
-						<a href="make-an-appointment.html" class="button button-large button-rounded text-white">Book an
-							appointment</a>
+								</div>
+							</fieldset>
+						</form>
 					</div>
-				</div>
-			</div>
-		</section>
 
-		<style>
+				</div><!-- Contact Form Overlay End -->
+			</div>
+
+	</div>
+	</section>
+
+
+
+	<style>
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
@@ -424,46 +416,37 @@
 
   </div>
 </footer>
-		<!-- Javascripts
+	<!-- Javascripts
 		============================================= -->
-		<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
+	<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
 
-		<!-- Tawk Chatbox -->
-		<!-- place holder for include('src/blocks/tawk.html') -->
+	<!-- Tawk Chatbox -->
+	<!-- place holder for include('src/blocks/tawk.html') -->
 
-		<!-- Canvas Scripts -->
-		<script src="js/functions.js"></script>
+	<!-- Canvas Scripts -->
+	<script src="js/functions.js"></script>
 
-		<script>
-			document.addEventListener("DOMContentLoaded", function () {
-				// Get the current domain
-				const currentDomain = window.location.origin;
+	<!-- Update of the redirect address -->
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			// Get the current domain
+			const currentDomain = window.location.origin;
 
-				// Construct the new URL path
-				const newPath = "/message-sent-success.html";
+			// Construct the new URL path
+			const newPath = "/ebook-download-success.html";
 
-				// Combine the domain and the new path
-				const newURL = currentDomain + newPath;
+			// Combine the domain and the new path
+			const newURL = currentDomain + newPath;
 
-				// Update the value of the input field
-				const redirectToInput = document.getElementById("redirectTo");
-				if (redirectToInput) {
-					redirectToInput.value = newURL;
-				}
-			});
-		</script>
-
-
-
-		<!-- reCaptcha -->
-
-		<script
-			src="https://www.google.com/recaptcha/enterprise.js?render=6LfK0JYqAAAAACn4qq-1KudtU3Yx77odbPPA76z7"></script>
-		<script>
-			function onSubmit(token) {
-				document.getElementById("contactForm").submit();
+			// Update the value of the input field
+			const redirectToInput = document.getElementById("redirectTo");
+			if (redirectToInput) {
+				redirectToInput.value = newURL;
 			}
-		</script>
+		});
+	</script>
+
+
 </body>
 
 </html>
