--- a/message-sent-success.html
+++ b/message-sent-success.html
@@ -20,14 +20,14 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 
-<title>Send us a message | Trade Duty Refund</title>
-<meta name="description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." xmlns:og="http://opengraphprotocol.org/schema/" />
+<title></title>
+<meta name="description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Send us a message | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="send-us-a-message.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:title" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="send-us-a-message.html" />
-<meta name="twitter:title" content="Send us a message | Trade Duty Refund" />
-<meta name="twitter:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." />
+<meta property="twitter:url" content="" />
+<meta name="twitter:title" content="" />
+<meta name="twitter:description" content="" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="send-us-a-message.html" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/send-us-a-message.html" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/send-us-a-message.html" />
-<link rel="alternate" hreflang="x-default" href="send-us-a-message.html" />
+<link rel="alternate" hreflang="en" href="" />
+<link rel="alternate" hreflang="fr" href="" />
+<link rel="alternate" hreflang="it" href="" />
+<link rel="alternate" hreflang="x-default" href="" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -52,6 +52,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="Duty Ref" />
 <link rel="manifest" href="/images/favicon/site.webmanifest" />
+
 
 	<!-- CSS imports -->
 	<!-- Font Imports -->
