--- a/TDR-Duty-Drawback-in-the-US.html
+++ b/TDR-Duty-Drawback-in-the-US.html
@@ -304,6 +304,11 @@
               </a>
             </li>
             <li class="menu-item">
+              <a class="menu-link" href="e-book-a-practical-guide-to-customs-duties-on-returns.html">
+                <div>E-Book</div>
+              </a>
+            </li>
+            <li class="menu-item">
               <a class="menu-link" href="about-us.html">
                 <div>Who we are</div>
               </a>
