--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -20,14 +20,14 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 
-<title>Schedule a Duty Reclaim Consultation | Trade Duty Refund</title>
-<meta name="description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." xmlns:og="http://opengraphprotocol.org/schema/" />
+<title>Master Customs Strategies for eCommerce: Free eBook by Trade Duty Refund</title>
+<meta name="description" content="Download Trade Duty Refund's free eBook to master customs strategies and reduce eCommerce returns costs. Get insights on duty management, market trends, regulation updates, and more. Simplify your international trade today!" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="make-an-appointment.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:title" content="Master Customs Strategies for eCommerce: Free eBook by Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:description" content="Download Trade Duty Refund's free eBook to master customs strategies and reduce eCommerce returns costs. Get insights on duty management, market trends, regulation updates, and more. Simplify your international trade today!" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="e-book-a-practical-guide-to-customs-duties-on-returns.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="make-an-appointment.html" />
-<meta name="twitter:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" />
-<meta name="twitter:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." />
+<meta property="twitter:url" content="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<meta name="twitter:title" content="Master Customs Strategies for eCommerce: Free eBook by Trade Duty Refund" />
+<meta name="twitter:description" content="Download Trade Duty Refund's free eBook to master customs strategies and reduce eCommerce returns costs. Get insights on duty management, market trends, regulation updates, and more. Simplify your international trade today!" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="make-an-appointment.html" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/make-an-appointment.html" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/make-an-appointment.html" />
-<link rel="alternate" hreflang="x-default" href="make-an-appointment.html" />
+<link rel="alternate" hreflang="en" href="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<link rel="alternate" hreflang="x-default" href="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -225,6 +225,11 @@
             <li class="menu-item">
               <a class="menu-link" href="https://blog.tradedutyrefund.com">
                 <div>Blog</div>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="e-book-a-practical-guide-to-customs-duties-on-returns.html">
+                <div>E-Book</div>
               </a>
             </li>
             <li class="menu-item">
