--- a/TDR-Duty-Free-Returns-to-the-US.html
+++ b/TDR-Duty-Free-Returns-to-the-US.html
@@ -174,7 +174,7 @@
 
 </head>
 
-<body class="stretched darkBlue-background">
+<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
@@ -475,7 +475,7 @@ Warehouse" id="text8670"
               </div>
 
               <div class="col-lg-6 align-self-center">
-                <h1 class="h1 fw-semibold lh-X mb-5 text-darkBlue">Reduce the impact of e-commerce return costs.</h1>
+                <h1 class="h1 fw-semibold lh-X mb-5 text-white">Reduce the impact of e-commerce return costs.</h1>
               </div>
             </div>
           </div>
