--- a/jocelyn-montpert.html
+++ b/jocelyn-montpert.html
@@ -104,7 +104,7 @@
 
 </head>
 
-<body>
+<body class="page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
   <!-- Business Card Starts -->
   <div class="card">
     <a href="https://tradedutyrefund.com">
