--- a/make-an-appointment.html
+++ b/make-an-appointment.html
@@ -84,8 +84,7 @@
 
 </head>
 
-<body class="stretched samaritan-background">
-
+<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper">
