--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -100,8 +100,7 @@
 
 </head>
 
-<body class="stretched samaritan-background">
-  <div id="wrapper">
+<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">  <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
