--- a/about-us.html
+++ b/about-us.html
@@ -93,7 +93,7 @@
 	</style>
 </head>
 
-<body class="stretched samaritan-background">
+<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
 
 	<!-- Document Wrapper
 	============================================= -->
