--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -41,10 +41,10 @@
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<link rel="alternate" hreflang="en" href="e-book-a-practical-guide-to-customs-duties-on-returns.htmlEN" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
-<link rel="alternate" hreflang="x-default" href="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<link rel="alternate" hreflang="x-default" href="e-book-a-practical-guide-to-customs-duties-on-returns.htmlEN" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
