--- a/message-sent-success.html
+++ b/message-sent-success.html
@@ -41,10 +41,10 @@
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="" />
+<link rel="alternate" hreflang="en" href="EN" />
 <link rel="alternate" hreflang="fr" href="" />
 <link rel="alternate" hreflang="it" href="" />
-<link rel="alternate" hreflang="x-default" href="" />
+<link rel="alternate" hreflang="x-default" href="EN" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
