email subject update

--- a/send-us-a-message.html
+++ b/send-us-a-message.html
@@ -99,7 +99,7 @@
 	</style>
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background">
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -335,6 +335,8 @@
 									<input type="hidden" name="accessKey" value="a946fec7-7261-44c0-9c93-74c04dc58639">
 									<!-- If you want form to redirect to a specific url after submission -->
 									<input id="redirectTo" type="hidden" name="redirectTo" value="">
+									<!-- Customize Subject to help Google AppScript identify emails -->
+								<input type="hidden" name="subject" value="Website-Message-Received">
 
 									<div class="col-md-6 form-group">
 										<label for="name">Name <small>*</small></label>
