--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -344,6 +344,8 @@
 								<input type="hidden" name="accessKey" value="e86b9da0-06b6-4d49-a19d-0825c9b33446">
 								<!-- If you want form to redirect to a specific url after submission -->
 								<input id="redirectTo" type="hidden" name="redirectTo" value="">
+								<!-- Customize Subject to help Google AppScript identify emails -->
+								<input type="hidden" name="subject" value="Autom-Ebook-Request">
 
 								<div class="col-md-6 mx-md-auto form-group">
 									<label for="firstName">First Name <small>*</small></label>
