update to ebook email subject

--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -345,7 +345,7 @@
 								<!-- If you want form to redirect to a specific url after submission -->
 								<input id="redirectTo" type="hidden" name="redirectTo" value="">
 								<!-- Customize Subject to help Google AppScript identify emails -->
-								<input type="hidden" name="subject" value="Autom-Ebook-Request">
+								<input type="hidden" name="subject" value="Autom-Ebook1-Request">
 
 								<div class="col-md-6 mx-md-auto form-group">
 									<label for="firstName">First Name <small>*</small></label>
